# ICPCNotebook

./: .gitignore  AlexMaterials1.cpp  CMakeLists.txt  README.md  TODO.txt  contents.txt  generate_html.py  generate_pdf.py  notebook.html  notebook.tex
AlexMaterials/: HungarianAlgorithm.java  Strings.java
ExtraCode/AlexMaterials/: DataStructures.java  GraphTheory.java  LinearAlgebra.java  NumberTheoreticTransform.java  NumberTheory.java  cppStuff.cpp
ExtraCode/stanford-cardinal-16/src/: Euler.cpp  KM.cpp  dates.cpp  ds_heavy_light_decomposition.cpp  (+17 more)
code/: 2Sat.cpp  AhoCorasick.cpp  BIT.cc  BellmanFord.cc  BinarySearch.cpp  CSP.cc  CalculatePhi.cpp  ConvexHull.cc  Dates.cc  DebugHeader.txt  Delaunay.cc  DijkstraFloyd.cc  Dinic.cc  EmacsSettings.txt  Euclid.cc  EulerianPath.cc  FFT.cc  FFT_new.cc  FastDijkstra.cc  FastExpo.cc  GaussJordan.cc  Geometry.cc  Geometry.cpp  Geometry.py  GraphCutInference.cc  HilbertCurve.cpp  IO.cc  KDTree.cc  KMP.cc  Kruskal.cc  LCA.cc  LCS.cc  LatLong.cc  LiChao.cpp  LineContainer.cpp  LongestIncreasingSubsequence.cc  Manacher.cpp  MaxBipartiteMatching.cc  MaxFlow.cc  MillerRabin.cc  (+24 more)
stanford-cardinal-16/: notebook.tex
stanford-cardinal-16/src/: ds_centroid_decomposition.cpp  ds_dynamic_convex_hull.cpp  ds_hash_table.cpp  ds_heavy_light_decomposition.cpp  ds_splay_tree.cpp  ds_treap.cpp  geom_library.cpp  graph_bcc.cpp  graph_mincost_maxflow.cpp  math_finite_fields.cpp  math_finite_fields_test.cpp  math_ntt.cpp  misc_virtual_tree.cpp  partition.cpp  string_AC.cpp  string_KMP.cpp  string_KMP_test.cpp  string_suffix_automaton.cpp
