cmake_minimum_required(VERSION 3.19)
project(ICPCNotebook)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-sign-compare -D _GLIBCXX_DEBUG -D _GLIBCXX_DEBUG_PEDANTIC ")

add_executable(Unordered code/UnorderedSetMap.cc)
add_executable(ordered code/OrderedSetMap.cc)
add_executable(IO code/IO.cc)
add_executable(primes code/Primes.cc)
add_executable(UnionFind code/UnionFind.cc)
add_executable(LST code/SegmentTreeLazy.cpp)
add_executable(SegTree code/SegmentTree.cpp)
add_executable(SCC code/SCC.cc)
add_executable(Partitions code/Partitions.cpp)
add_executable(Test Test.cpp)
